tests/NormalTests/paczka1/small_fuzzy/10495195.err
Error in line 1: ZCGWeaeh9E A296 40,2
Error in line 2: S814 A296 69,3
